--- a/Styl.css
+++ b/Styl.css
@@ -91,3 +91,43 @@ padding-bottom: 4rem;
     background-color:blue;
    
 }
+input[type="color"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border-radius: 15px;
+    border: 1px solid var(--gray-6);
+}
+
+input[type="color"]::-moz-color-swatch {
+    border-radius: 15px;
+    border: 1px solid var(--gray-6);
+}
+
+.controls-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#clear-canvas {
+    background-color: var(--gray-2);
+    border: 1px solid var(--gray-6);
+    border-radius: 0.25em;
+    padding: 0.75em 1.5em;
+    font-size: 1rem;
+    color: var(--gray-12);
+    cursor: pointer;
+}
+
+#clear-canvas:hover {
+    background-color: var(--gray-3);
+}
