--- a/Styl.css
+++ b/Styl.css
@@ -94,7 +94,7 @@ padding-bottom: 4rem;
 .link:hover{
     color:white;
 }
-input[type="color"] {
+.konewka {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
